k8s/video-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  selector:
    component: video
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: video
  template:
    metadata:
      labels:
        component: video
    spec:
      containers:
        - name: video
          image: vincentvella/encounter-video
          ports:
            - containerPort: 9000
