k8s/web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    component: web
  ports:
    - port: 19006
      targetPort: 19006
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: vincentvella/encounter-web
          ports:
            - containerPort: 19006
