k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /video/?(.*)
            backend:
              serviceName: video-service
              servicePort: 5000
          # TODO: Add when frontend is in ingress
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-cluster-ip-service
          #     servicePort: 8080
